# elodin-sim

./: .gitignore  Cargo.toml
.cursor/skills/elodin-cranelift/: SKILL.md
ai-context/cranelift/: phase2-progress.md
libs/cranelift-mlir/: ARCHITECTURE.md  Cargo.toml  README.md
libs/cranelift-mlir/src/: ir.rs  lib.rs  lower.rs  parser.rs  tensor_rt.rs
libs/cranelift-mlir/testdata/: ball.stablehlo.mlir  cube-sat.stablehlo.mlir  drone.stablehlo.mlir  linalg-iree.stablehlo.mlir  rocket.stablehlo.mlir  three-body.stablehlo.mlir
libs/cranelift-mlir/tests/: ball_e2e.rs  checkpoint_test.rs  closed_call_test.mlir  cube_sat_e2e.rs  drone_e2e.rs  drone_tick_test.rs  e2e.rs  linalg_iree_e2e.rs  ops.rs  rocket_e2e.rs  test_closed_call.rs  test_dynamic_ops_3body.rs  test_gather_3body.rs  test_sret_large.rs  test_threefry.rs  test_threefry_e2e.rs  test_uniform_pipeline.rs  test_while_dyn_slice.rs
libs/cranelift-mlir/tests/common/: mod.rs
libs/nox-py/: Cargo.toml
libs/nox-py/src/: cranelift_compile.rs  cranelift_exec.rs  error.rs  exec.rs  lib.rs  world_builder.rs
libs/s10/src/: sim.rs
nix/pkgs/: elodin-py.nix
scripts/ci/baseline/: tolerances.json
scripts/ci/baseline/cube-sat-csv/: profile-metrics.json
