[package]
name = "cranelift-mlir"
license = "MIT OR Apache-2.0"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.128"
winnow = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
